# LlamaFlow

./: .gitignore  CMakeLists.txt  LICENSE  LlamaManager.cpp  LlamaManager.hpp  README.md  configs.json  imgui.ini  logo_png.h  mac_icon.mm  main.cpp  makefile
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-16-enhanced-terminal.md  2026-05-16-ide-log-viewer.md
docs/superpowers/specs/: 2026-05-16-enhanced-terminal-design.md  2026-05-16-ide-log-viewer-design.md
